[package]
name = "tento-chrono"
version = "0.1.0"
edition = "2024"

[dependencies]
serde.workspace = true
arbitrary.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
anyhow.workspace = true
lona-utils.workspace = true
utoipa.workspace = true

[dev-dependencies]
tento-chrono-bindings.path = "./bindings"
boa_engine.version = "0.20.0"
boa_parser.version = "0.20.0"
boa_runtime.version = "0.20.0"
