[package]
name = "tento-chrono-bindings"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
arbitrary.workspace = true
chrono.workspace = true
tracing.workspace = true
tokio.workspace = true
lona-utils.workspace = true
serde_lona_env.workspace = true

boa_engine.version = "0.20.0"
boa_parser.version = "0.20.0"
boa_runtime.version = "0.20.0"

anyhow.workspace = true

[build-dependencies]
